# formal-fft

./: Proof.hs  README.md  formal-fft.cabal
src/Math/: FormalFFT.hs
