name:                formal-fft
version:             0.1.0.0
synopsis:            Formally verified DFT and FFT implementation.
homepage:            https://github.com/davnils/formal-fft
license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.FormalFFT
  hs-source-dirs:      src
  build-depends:       base >=4.5, sbv >=2.8, QuickCheck >=2.4
  
